lexer_parser/src/test/exempleFile/miniJaja/fail/afterMain.mjj
/************************/
/* Programme MiniJaja	*/
/* Validation des attributs	*/
/************************/

class afterMain{


	main {

	}
    
    int x;
    int y = 5;
    boolean a = true;
    boolean b;
}